Edited wiki page through web user interface.

--- a/wiki/ExposingServiceViaHttp.wiki
+++ b/wiki/ExposingServiceViaHttp.wiki
@@ -17,7 +17,7 @@ Standard way to expose a service is through a servlet. Here is what you should d
 
 = Creating business interface and its implementation =
 
-YourService.java:
+!YourService.java:
 
 {{{
 public interface YourService {
@@ -25,7 +25,7 @@ public interface YourService {
 }
 }}}
 
-YourServiceImpl.java:
+!YourServiceImpl.java:
 
 {{{
 public class YourServiceImpl implements YourService {
@@ -35,7 +35,7 @@ public class YourServiceImpl implements YourService {
 }
 }}}
 
-= Creating exposing servlet =
+= Creating an exposing servlet =
 
 {{{
 public class YourServiceServlet extends XRemotingServlet {
@@ -47,7 +47,7 @@ public class YourServiceServlet extends XRemotingServlet {
 }
 }}}
 
-= Defining exposing servlet in web.xml =
+= Defining an exposing servlet in web.xml =
 
 {{{
 <servlet>
@@ -73,3 +73,30 @@ XRemotingProxyFactory factory = new XRemotingProxyFactory("http://yourhost/your-
 YourService yourService = (YourService) factory.create(YourService.class);
 System.out.println(yourService.sayHello("Santa Claus"));
 }}}
+
+= More configuration =
+
+Examples shown above are for the basic case which is described as follows:
+
+ * XStream is used as a Serializer (!XStreamSerializer)
+ * Default machinery based on URL.openConnection() is used as a transport (implemented by !HttpRequester)
+
+== Requester ==
+
+There's an alternative Requester implementation: !CommonsHttpClientRequester which uses HttpClient under the covers. You may first intialize the client (including proxy, ssl configuration and other things) and then use that implementation:
+
+{{{
+HttpClient httpClient = new HttpClient();
+// ... configure httpClient ...
+Requester requester = new CommonsHttpClientRequester(httpClient, "http://yourhost/your-service");
+}}}
+
+You can then feed this Requester to !XRemotingProxyFactory constructor.
+
+For more information on implementing your own Requester, see [Extending]
+
+== Serializer ==
+
+You can also override a Serializer. Please note that you should use the same Serializer implementation (or at least compatible ones) on both sides: on your server and on the calling side.
+
+For more information on implementing your own Serializer, see [Extending]
