--- a/wiki/ExposingServiceViaHttp.wiki
+++ b/wiki/ExposingServiceViaHttp.wiki
@@ -78,12 +78,12 @@ System.out.println(yourService.sayHello("Santa Claus"));
 
 Examples shown above are for the basic case which is described as follows:
 
- * XStream is used as a Serializer (!XStreamSerializer)
+ * XStream is used as a Serializer (XStreamSerializer)
  * Default machinery based on URL.openConnection() is used as a transport (implemented by !HttpRequester)
 
 == Requester ==
 
-There's an alternative Requester implementation: !CommonsHttpClientRequester which uses HttpClient under the covers. You may first intialize the client (including proxy, ssl configuration and other things) and then use that implementation:
+There's an alternative Requester implementation: !CommonsHttpClientRequester which uses !HttpClient under the covers. You may first intialize the client (including proxy, ssl configuration and other things) and then use that implementation:
 
 {{{
 HttpClient httpClient = new HttpClient();
