Edited wiki page through web user interface.

--- a/wiki/SpringIntegration.wiki
+++ b/wiki/SpringIntegration.wiki
@@ -20,7 +20,7 @@ In your context XML configuration, define something like the following:
 
 After this, use one of the standard ways of exposing a service exporter.
 
-== Defining in a UrlMapping for !DispatcherServlet ==
+== Defining in a !UrlMapping for a !DispatcherServlet ==
 
 {{{
 <bean id="urlRemoteMapping" class="org.springframework.web.servlet.handler.SimpleUrlHandlerMapping">
@@ -44,3 +44,18 @@ After this, use one of the standard ways of exposing a service exporter.
     <url-pattern>/your-service</url-pattern>
 </servlet-mapping>
 }}}
+
+= Invoking a service via HTTP(s) =
+
+Here's what you may define in your client-side Spring context:
+
+{{{
+<bean id="yourService" class="com.googlecode.xremoting.spring.XRemotingProxyFactoryBean">
+    <property name="serviceUrl" value="http://yourdomain.com/cool-service"/>
+    <property name="serviceInterface" value="com.yourpackage.YourService"/>
+</bean>
+}}}
+
+Then just use factoryBean.getBean("yourService") or standard Dependency Injection techniques.
+
+!XRemotingProxyFactoryBean has a lot of properties which allow to enable SSL (including client auth), BASIC authentication, HTTP proxy, or even use your own Serializer or Requester implementation. See javadocs for details.
