Edited wiki page through web user interface.

--- a/wiki/CallingRemoteService.wiki
+++ b/wiki/CallingRemoteService.wiki
@@ -28,6 +28,8 @@ Requester requester = new CommonsHttpClientRequester(httpClient, "http://yourhos
 
 You can then feed this Requester to !XRemotingProxyFactory constructor.
 
+There's a helper class called !HttpClientBuilder which is aimed to aid constructing !HttpClient instances.
+
 For more information on implementing your own Requester, see [Extending]
 
 == Serializer ==
