--- a/wiki/CallingRemoteService.wiki
+++ b/wiki/CallingRemoteService.wiki
@@ -40,4 +40,4 @@ For more information on implementing your own Serializer, see [Extending]
 
 = Alternatives =
 
-See SpringIntegration to get information on how to invoke your service exposed via !XRemoting using Spring Framework.
+See SpringIntegration to get information on how to invoke your service exposed via XRemoting using Spring Framework.
