Edited wiki page through web user interface.

--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -15,46 +15,9 @@ To use your service via HTTP(s), you have to do the following:
    1. [ExposingServiceViaHttp Expose] your service interface on the server via HTTP(s)
    1. [CallingRemoteService Use XRemotingProxyFactory] to get proxy for your remote service (on the client)
 
-= Libraries =
+= Dependencies =
 
-You will need the following libraries:
-
- * xremoting-core-${version}.jar
- * xstream-1.1.1.jar (or higher, only if you need XStream serialization which is default)
- * xpp3.jar (required by XStream)
- * commons-httpclient-3.0.jar (or higher, only, if you need httpclient)
-
-== Using maven2 ==
-
-Here's an example for project which uses both XStream for serialization and httpclient for transport:
-
-{{{
-<repositories>
-    <repository>
-        <id>xremoting-release</id>
-        <name>xremoting release</name>
-        <url>http://xremoting.googlecode.com/svn/maven2/release</url>
-    </repository>
-</repositories>
-
-<dependencies>
-    <dependency>
-        <groupId>com.googlecode.xremoting</groupId>
-        <artifactId>xremoting-core</artifactId>
-        <version>1.0-1</version>
-    </dependency>
-    <dependency>
-        <groupId>com.thoughtworks.xstream</groupId>
-        <artifactId>xstream</artifactId>
-        <version>1.1.1</version>
-    </dependency>
-    <dependency>
-        <groupId>commons-httpclient</groupId>
-        <artifactId>commons-httpclient</artifactId>
-        <version>3.1</version>
-    </dependency>
-</dependencies>
-}}}
+Read [Dependencies the following] to know about requirements and dependencies.
 
 = Creating business interface and its implementation =
 
